tests/integration/security/test_artifacts/security-a995fce91cf649b097c94d/TestMutualTlsOrigination/missing/_test_context/DestinationRule.1770457345.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-server-sds-mtls-credential-not-created
spec:
  host: "external.external-4-16320.svc.cluster.local"
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 443
        tls:
          mode: MUTUAL
          credentialName: mtls-credential-not-created
          sni: external.external-4-16320.svc.cluster.local
